--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".BasicView.BasicViewTest"/>
+        <activity android:name=".BasicView.BasicViewLogin"/>
+        <activity android:name=".BasicView.BasicViewTicTaeToe"/>
+        <activity android:name=".BasicView.BasicViewTicTaeToeDynamic"/>
     </application>
 
 </manifest>
