메인 화면에 리스트뷰, 리싸이클러뷰적용, 로그인에 Result Request 적용

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".BasicView.BasicViewTest"/>
-        <activity android:name=".BasicView.BasicViewLogin"/>
-        <activity android:name=".BasicView.BasicViewTicTaeToe"/>
-        <activity android:name=".BasicView.BasicViewTicTaeToeDynamic"/>
+        <activity android:name=".BasicViewTest.BasicViewTest"/>
+        <activity android:name=".BasicViewTest.BasicViewLogin"/>
+        <activity android:name=".BasicViewTest.BasicViewTicTaeToe"/>
+        <activity android:name=".BasicViewTest.BasicViewTicTaeToeDynamic"/>
+        <activity android:name=".ActivityTest.ResultRequestActivity"/>
     </application>
 
 </manifest>
