로그인에 레트로핏 응답 설정, 데이터 바인딩 예제 적용

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".Activity.BasicViewTicTaeToeDynamic"/>
         <activity android:name=".Activity.ResultRequestActivity"/>
         <activity android:name=".Activity.RetrofitTest"/>
+        <activity android:name=".Activity.DatabindingBasic"/>
     </application>
 
 </manifest>
