--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,20 +11,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.BasicViewTest"/>
-        <activity android:name=".Activity.BasicViewLogin"/>
-        <activity android:name=".Activity.BasicViewTicTaeToe"/>
-        <activity android:name=".Activity.BasicViewTicTaeToeDynamic"/>
-        <activity android:name=".Activity.ResultRequestActivity"/>
-        <activity android:name=".Activity.RetrofitTest"/>
-        <activity android:name=".Activity.DatabindingBasic"/>
+        <activity android:name=".activity.BasicViewTest"/>
+        <activity android:name=".activity.BasicViewLogin"/>
+        <activity android:name=".activity.BasicViewTicTaeToe"/>
+        <activity android:name=".activity.BasicViewTicTaeToeDynamic"/>
+        <activity android:name=".activity.ResultRequestActivity"/>
+        <activity android:name=".activity.RetrofitTest"/>
+        <activity android:name=".activity.DatabindingBasic"/>
     </application>
 
 </manifest>
