웹뷰 javascript interface 예제 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".activity.ResultRequestActivity"/>
         <activity android:name=".activity.RetrofitTest"/>
         <activity android:name=".activity.DatabindingBasic"/>
+        <activity android:name=".webviewactivity.WebViewActivity"/>
     </application>
 
 </manifest>
