서비스 바인드 기본 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.bungabear.androidstudy">
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -10,7 +11,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,6 +28,9 @@
         <activity android:name=".activity.RetrofitTest"/>
         <activity android:name=".activity.DatabindingBasic"/>
         <activity android:name=".webviewactivity.WebViewActivity"/>
+        <activity android:name=".servicebind.SimpleServiceBindActivity"/>
+
+        <service android:name=".servicebind.SimpleBindService"/>
     </application>
 
 </manifest>
